aks/04-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: robot-shop
  labels:
    app: mongodb
spec:
  clusterIP: None
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: robot-shop
  labels:
    app: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: <ACR_LOGIN_SERVER>/robotshop/rs-mongodb:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
              name: mongo
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
