aks/05-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: robot-shop
  labels:
    app: mysql
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  selector:
    app: mysql

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: robot-shop
  labels:
    app: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: <ACR_LOGIN_SERVER>/robotshop/rs-mysql-db:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 60
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 1024Mi
          volumeMounts:
            - name: mysql-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
